--- a/6_applications_shearography/sift_shearogram.ipynb
+++ b/6_applications_shearography/sift_shearogram.ipynb
@@ -37,7 +37,7 @@
    "id": "8603cbd8",
    "metadata": {},
    "source": [
-    "Figure"
+    "Figure 6.9"
    ]
   },
   {
@@ -129,7 +129,7 @@
    "id": "cc5d1e16",
    "metadata": {},
    "source": [
-    "Figure"
+    "Figure 6.10"
    ]
   },
   {
